tests/invalid_typecheck/test_tc_gt_right_bool.aphi
/*
Type-check error: Invalid operand for '>' (expected int, got bool).
Right operand of '>' is bool.
*/

int x;
bool b;
bool r;

procedure main {
    x = 5;
    b = true;
    r = x > b;
}
